--- a/lib/locales/ta.json
+++ b/lib/locales/ta.json
@@ -58,5 +58,104 @@
   "suggested_practice": "பரிந்துரைக்கப்பட்ட பயிற்சி அமர்வுகள்",
   "streak_days": "தொடர் நாட்கள்",
   "streak_days_desc": "இன்றைய தினம் உட்பட தொடர்ச்சியான நாட்கள்",
-  "calendar": "நாட்காட்டி"
+  "calendar": "நாட்காட்டி",
+  "phrase_set_title": "தினசரி பயன்பாட்டு சொற்றொடர்கள்",
+  "phrase_set_category_start": "உரையாடலைத் தொடங்குதல்",
+  "phrase_set_category_reaction": "பிரதிகிரைகள்",
+  "phrase_set_category_bye": "விடைபெறுதல்",
+  "phrase_set_category_change-topic": "தலைப்பை மாற்றுதல்",
+  "phrase_set_category_thanks": "நன்றி மற்றும் மன்னிப்பு",
+  "phrase_set_category_request": "கோரிக்கைகள்",
+  "phrase_set_category_agree": "ஒப்புதல் மற்றும் மறுப்பு",
+  "phrase_set_category_trouble": "சிக்கல் நேரத்தில்",
+  "phrase_set_category_weather": "வானிலை",
+  "phrase_set_category_food": "உணவு மற்றும் உணவகம்",
+  "phrase_set_category_hobby": "விளையாட்டு மற்றும் விருப்பங்கள்",
+  "phrase_set_category_family": "குடும்பம் மற்றும் நண்பர்கள்",
+  "phrase_set_category_shopping": "ஷாப்பிங்",
+  "phrase_set_category_health": "ஆரோக்கியம்",
+  "phrase_set_category_cafe": "ஸ்டார்பக்ஸ்/கஃபே",
+  "phrase_set": {
+    "start": [
+      {"phrase": "How's it going?", "translation": "எப்படி இருக்கிறீர்கள்?"},
+      {"phrase": "What's up?", "translation": "என்ன செய்திகள்?"},
+      {"phrase": "Long time no see!", "translation": "நீண்ட நாட்களுக்கு பிறகு பார்க்கிறேன்!"}
+    ],
+    "reaction": [
+      {"phrase": "I see.", "translation": "புரிகிறது."},
+      {"phrase": "That's interesting.", "translation": "அது சுவாரஸ்யமாக உள்ளது."},
+      {"phrase": "Exactly!", "translation": "சரியாக அதுவே!"}
+    ],
+    "bye": [
+      {"phrase": "See you around!", "translation": "பிறகு சந்திப்போம்!"},
+      {"phrase": "Take care!", "translation": "கவனமாக இருங்கள்!"},
+      {"phrase": "Have a nice day!", "translation": "நல்ல நாளாக இருக்கட்டும்!"}
+    ],
+    "change-topic": [
+      {"phrase": "By the way, ...", "translation": "இதற்கிடையில்..."},
+      {"phrase": "Speaking of which, ...", "translation": "அதைப் பற்றி பேசும் போது..."},
+      {"phrase": "That reminds me, ...", "translation": "அது எனக்கு நினைவூட்டுகிறது..."},
+      {"phrase": "On a different note, ...", "translation": "வேறு விஷயத்திற்கு..."}
+    ],
+    "thanks": [
+      {"phrase": "Thank you so much.", "translation": "மிகவும் நன்றி."},
+      {"phrase": "I really appreciate it.", "translation": "நான் உண்மையில் பாராட்டுகிறேன்."},
+      {"phrase": "Sorry about that.", "translation": "அதற்காக மன்னிக்கவும்."},
+      {"phrase": "No worries.", "translation": "பரவாயில்லை."}
+    ],
+    "request": [
+      {"phrase": "Could you help me?", "translation": "நீங்கள் எனக்கு உதவ முடியுமா?"},
+      {"phrase": "Would you mind if I ...?", "translation": "நான் ... செய்தால் உங்களுக்கு பிரச்சனை இல்லையா?"},
+      {"phrase": "Can you do me a favor?", "translation": "நீங்கள் எனக்கு ஒரு உதவி செய்ய முடியுமா?"}
+    ],
+    "agree": [
+      {"phrase": "I agree.", "translation": "நான் ஒத்துக்கொள்கிறேன்."},
+      {"phrase": "I think so too.", "translation": "நானும் அப்படித்தான் நினைக்கிறேன்."},
+      {"phrase": "I'm not sure about that.", "translation": "அதைப் பற்றி எனக்கு உறுதி இல்லை."}
+    ],
+    "trouble": [
+      {"phrase": "I'm not sure.", "translation": "எனக்கு உறுதி இல்லை."},
+      {"phrase": "Let me think.", "translation": "நான் சிந்திக்கட்டும்."},
+      {"phrase": "Can you repeat that?", "translation": "நீங்கள் அதை மீண்டும் சொல்ல முடியுமா?"}
+    ],
+    "weather": [
+      {"phrase": "It's sunny today.", "translation": "இன்று வெயில் அதிகம்."},
+      {"phrase": "It's raining.", "translation": "மழை பெய்துகொண்டிருக்கிறது."},
+      {"phrase": "It's hot, isn't it?", "translation": "இன்று வெப்பமாக இருக்கிறது, அல்லவா?"}
+    ],
+    "food": [
+      {"phrase": "I'm hungry.", "translation": "எனக்கு பசிக்கிறது."},
+      {"phrase": "Let's eat out.", "translation": "வெளியில் சாப்பிடலாம்."},
+      {"phrase": "This is delicious!", "translation": "இது ருசியாக உள்ளது!"}
+    ],
+    "hobby": [
+      {"phrase": "What are your hobbies?", "translation": "உங்கள் பொழுதுபோக்குகள் என்ன?"},
+      {"phrase": "I like reading.", "translation": "எனக்கு படிப்பது பிடிக்கும்."},
+      {"phrase": "I play tennis.", "translation": "நான் டென்னிஸ் விளையாடுவேன்."}
+    ],
+    "family": [
+      {"phrase": "Do you have any siblings?", "translation": "உங்களுக்கு சகோதரர்கள் உள்ளனரா?"},
+      {"phrase": "Tell me about your family.", "translation": "உங்கள் குடும்பத்தைப் பற்றி சொல்லுங்கள்."},
+      {"phrase": "I have two children.", "translation": "எனக்கு இரண்டு பிள்ளைகள் உள்ளனர்."}
+    ],
+    "shopping": [
+      {"phrase": "How much is this?", "translation": "இது எவ்வளவு?"},
+      {"phrase": "Do you have this in another color?", "translation": "இது வேறு நிறத்தில் உள்ளதா?"},
+      {"phrase": "Can I try this on?", "translation": "நான் இதை அணிந்து பார்க்கலாமா?"}
+    ],
+    "health": [
+      {"phrase": "I don't feel well.", "translation": "நான் உடல்நலம் இல்லாமல் இருக்கிறேன்."},
+      {"phrase": "I have a headache.", "translation": "எனக்கு தலைவலி உள்ளது."},
+      {"phrase": "Take care of yourself.", "translation": "உங்களை கவனித்துக்கொள்ளுங்கள்."}
+    ],
+    "cafe": [
+      {"phrase": "Can I get a tall latte, please?", "translation": "ஒரு பெரிய லாட்டே தர முடியுமா?"},
+      {"phrase": "Is this seat taken?", "translation": "இந்த இருக்கை பிடிக்கப்பட்டதா?"},
+      {"phrase": "Can I have it to go?", "translation": "இதை எடுத்துச் செல்லலாமா?"},
+      {"phrase": "Do you have soy milk?", "translation": "உங்களிடம் சோயா பால் உள்ளதா?"},
+      {"phrase": "Can I get this without sugar?", "translation": "இதை சர்க்கரை இல்லாமல் தர முடியுமா?"},
+      {"phrase": "What's the Wi-Fi password?", "translation": "Wi-Fi கடவுச்சொல் என்ன?"},
+      {"phrase": "Can I get a receipt?", "translation": "ஒரு ரசீது தர முடியுமா?"}
+    ]
+  }
 } 
